# brewfile

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
Formula/: brewfile.rb
scripts/: release.sh
src/brewfile/: __init__.py  brew.py  cli.py  manager.py  models.py  utils.py
